Service Workers restored from persistent storage have 'redundant' state https://bugs.webkit.org/show_bug.cgi?id=181749 <rdar://problem/36556486>

Reviewed by Youenn Fablet.

Source/WebCore:

Tested by new API test.

* workers/service/server/SWServer.cpp:
(WebCore::SWServer::installContextData):
Make sure the SWServerWorker's state is set to "activated" after it is assigned to
the registrations' active slot. Otherwise, it stays in its default state (redundant).

Source/WebKit:

Allow service workers to intercept custom protocol loads as this is useful for
API testing.

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoad):
(WebKit::WebLoaderStrategy::tryLoadingUsingURLSchemeHandler):
* WebProcess/Network/WebLoaderStrategy.h:

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:
(-[SWMessageHandlerForFetchTest userContentController:didReceiveScriptMessage:]):


Canonical link: https://commits.webkit.org/197638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227153 268f45cc-cd09-0410-ab3c-d52691b4dbfc